--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 105, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 .footer {
